create customer and product
