# swagger.yaml
@@ -16,7 +16,7 @@ paths:
           description: 'OK'
         500:
           description: 'Server Error'
-
+  /api/users/signup:
     post:
       tags:
       - users
@@ -37,6 +37,28 @@ paths:
           description: 'Conflict'
         500:
           description: 'Server Error'
+
+  /api/users/login:
+    post:
+      tags:
+      - users
+      summary: Login User
+      parameters:
+      - name: body
+        in: body
+        description: user Data
+        required: true
+        schema:
+          $ref: '#/definitions/users'
+      responses:
+        200:
+          description: 'Login Successful'
+        400:
+          description: 'Bad Request'
+        409:
+          description: 'Conflict'
+        500:
+          description: 'Server Error'       
 
   /api/users/{id}:
     get:
@@ -271,9 +293,16 @@ definitions:
   users:
     type: object
     required:
+      - firstName
       - email
       - password
     properties:
+      firstName:
+        type: string
+        description: user First Name
+      lastName:
+        type: string
+        description: user Last Name
       email:
         type: string
         description: user Email
